@@ -4,6 +4,9 @@ Revision history for {{$dist->name}}
     New features:
     * 'UTF-8' is now supported as an alias for utf8 in ->encode
     and ->decode.
+    * ->catch for continuing after errors
+    * ->as_string and ->as_list / ->as_arrayref Future-returning methods
+    * ->prefix and ->suffix
 
 0.010     2017-03-04 14:20:06+08:00 Asia/Kuala_Lumpur
     New features:
